pkg/gox/testdata/errors/empty_child_expression.gox
package demo

func View() any {
	return <main>{}</main>
}
